--- a/notebook/2. MODEL TRAINING.ipynb
+++ b/notebook/2. MODEL TRAINING.ipynb
@@ -10,6 +10,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "25791a74",
    "metadata": {},
@@ -20,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "b080dfb2",
    "metadata": {},
    "outputs": [],
@@ -45,6 +46,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e45079ad",
    "metadata": {},
@@ -54,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "e11c6255",
    "metadata": {},
    "outputs": [],
@@ -63,6 +65,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "20634923",
    "metadata": {},
@@ -72,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "e7e412a2",
    "metadata": {},
    "outputs": [
@@ -183,7 +186,7 @@
        "4                    none          76             78             75  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,6 +196,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fbd32281",
    "metadata": {},
@@ -485,6 +489,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4cd80317",
    "metadata": {},
@@ -689,6 +694,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "06480b5a",
    "metadata": {},
@@ -800,6 +806,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "357a7c1c",
    "metadata": {},
@@ -830,6 +837,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1d31453e",
    "metadata": {},
@@ -882,6 +890,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "79c2fe28",
    "metadata": {},
